<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>ch.sbb</groupId>
    <artifactId>matsim-sbb</artifactId>
    <version>4.0.4-SNAPSHOT</version>
    <name>MATSim SBB Project</name>
    <description>MATSim for SIMBA MOBi</description>

    <repositories>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <!-- Repository for MATSim releases and snapshots (MATSim is not on Maven central) -->
            <id>matsim</id>
            <url>https://repo.matsim.org/repository/matsim</url>
        </repository>

    </repositories>

    <properties>
        <matsim.version>15.0-PR2415</matsim.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
            <type>test-jar</type>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>drt</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>parking</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>av</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>osm</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>sbb-extensions</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency> <!-- MATSim uses Guice .0 which uses guava 19.0, but av/drvp requires a newer guava version it seems -->
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>


        <dependency>
            <groupId>com.graphhopper</groupId>
            <artifactId>graphhopper-isochrone</artifactId>
            <version>0.13.0</version>
        </dependency>


        <!-- Include the JUnit testing library -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>

        <!-- Include the jacobs library to use the COM interface -->
        <dependency>
            <groupId>com.hynnet</groupId>
            <artifactId>jacob</artifactId>
            <version>1.18</version>
        </dependency>

        <dependency>
            <groupId>omx</groupId>
            <artifactId>omx</artifactId>
            <version>2</version>
        </dependency>

        <!-- used by convergence stats-->
        <dependency>
            <groupId>com.github.haifengl</groupId>
            <artifactId>smile-core</artifactId>
            <version>2.1.0</version>
        </dependency>


        <!-- ScoringXLSX Parser-->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>1.11.768</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <dateFormat>yyyyMMdd_HHmmss</dateFormat>
                </configuration>

            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>ch.sbb.matsim.RunSBB</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <forkedProcessExitTimeoutInSeconds>1200</forkedProcessExitTimeoutInSeconds>

                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>mvn</id>
            <url>https://bin.sbb.ch/artifactory/simba.mvn/</url>
        </repository>
        <snapshotRepository>
            <id>mvn</id>
            <url>https://bin.sbb.ch/artifactory/simba.mvn/</url>
        </snapshotRepository>
    </distributionManagement>

</project>
